[project]
name = "hypixel"
version = "0.1.0"
authors = [
  { name="hyxonqz"},
]
description = "A Python Library for Hypixel"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/HyxonQz/Python-Hypixel-API"
"Bug Tracker" = "https://github.com/HyxonQz/Python-Hypixel-API/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"